2013-08-08

	* Protocol-v3.html: Random exponents in SMP should be 1536 bits.
	The spec (but not the code) incorrectly said "128 bits" before.

2013-07-28

	* packaging/fedora/libotr.spec: Fedora spec file for 4.x from
	Paul Wouters <paul@cypherpunks.ca>

2013-07-17

	* toolkit/sesskeys.c: Workaround for a crash bug in libgcrypt
	affecting otr_sesskeys.  Passing a private key value of 0 to
	otr_sesskeys would cause libgcrypt to crash in gcry_mpi_powm.
	We reported this libgcrypt bug and it was then fixed in
	http://lists.gnupg.org/pipermail/gcrypt-devel/2013-July/002251.html
	but the workaround is simply to use
	gcry_mpi_new(DH1536_MOD_LEN_BITS) instead of gcry_mpi_new(0).
	Note that this only affected the otr_sesskeys toolkit program,
	and not libotr itself.
	Thanks to the Mayhem Team at CMU (Alexandre Rebert, Thanassis
	Avgerinos, Sang Kil Cha, David Brumley, Manuel Egele) for the
	report.

2013-01-19

	* src/message.c: pass opdata when sending message fragment
	The inject_message callback was missing the opdata when sending
	message fragments.  Thanks to David Goulet <dgoulet@ev0ke.net>
	for the report.

2012-12-18

	* src/message.c: Copy lastmessage to the newly created context.
	This fixes a case where the first user message gets lost when
	OTRL_POLICY_REQUIRE_ENCRYPTION policy is set because after
	establishing the encryption lastmessage remains with the master
	context and will not be resent.  Thanks to Andreas Schlick
	<schlick@lavabit.com> for the report.

2012-09-09

	* configure.ac: Make linker hardening [DEP, ALSR] work on
	Windows builds.  Thanks to Daniel Atallah <datallah@pidgin.im>
	for noticing that it wasn't working before.

2012-09-04

	* README: Release 4.0.0

2012-08-28

	* UPGRADING:
	* src/proto.h:
	* src/proto.c: Don't have otrl_init call exit(1) if the
	application's requested version number differs from libotr's.
	Rather, return a non-zero error code, and have the application
	clean up gracefully.  The OTRL_INIT macro now checks the error